<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorOnTertiary">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@drawable/search_view_selector"

        android:foregroundTint="?attr/colorSecondaryVariant"
        android:outlineAmbientShadowColor="?attr/colorSecondaryVariant"
        android:outlineSpotShadowColor="?attr/colorSecondaryVariant"
        android:textAppearance="@style/wy_lij_pono"

        android:textColor="?attr/colorSecondaryVariant"

        android:visibility="visible"
        app:iconifiedByDefault="false"

        app:itemIconTint="?attr/colorSecondaryVariant"
        app:itemRippleColor="?attr/colorSecondary"

        app:itemTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toTopOf="@+id/scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:queryHint="@string/search_hint"
        app:searchHintIcon="?attr/colorSecondaryVariant"
        app:searchIcon="@drawable/search_24_75" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/search"
        tools:ignore="MissingConstraints">

        <HorizontalScrollView
            android:id="@+id/hscroll"
            android:layout_width="fill_parent"
            android:layout_marginTop="6dp"
            android:layout_height="50dp">

            <pl.plantoplate.ui.customViews.RadioGridGroup
                android:id="@+id/radio_group_recipe"
                android:layout_width="500dp"
                android:layout_height="60dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="2dp"
                android:columnCount="7"
                android:orientation="horizontal"
                android:rowCount="1"

                app:layout_constraintBottom_toTopOf="@+id/kalendarz_przep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/wszystkie"
                    android:layout_width="90dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Wszystko"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/dania_glowne"
                    android:layout_width="120dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Dania głowne"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/zupy"
                    android:layout_width="66dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Zupy"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/desery"
                    android:layout_width="76dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Desery"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/przekaski"
                    android:layout_width="90dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Przekąski"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/napoje"
                    android:layout_width="76dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/state_list_button_recipe_category"
                    android:button="@null"
                    android:clickable="true"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="Napoje"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

            </pl.plantoplate.ui.customViews.RadioGridGroup>
        </HorizontalScrollView>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rec_def"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        app:layout_constraintVertical_bias="0.0">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerBase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>